@@ -140,7 +140,7 @@ public final class MapField<K,V> extends Pattern
 	
 	public V get(final Item item, final K key)
 	{
-		final Item relationItem = uniqueConstraint.searchUnique(item, key);
+		final Item relationItem = uniqueConstraint.search(item, key);
 		if(relationItem!=null)
 			return value.get(relationItem);
 		else
@@ -149,7 +149,7 @@ public final class MapField<K,V> extends Pattern
 	
 	public void set(final Item item, final K key, final V value)
 	{
-		final Item relationItem = uniqueConstraint.searchUnique(item, key);
+		final Item relationItem = uniqueConstraint.search(item, key);
 		if(relationItem==null)
 		{
 			if(value!=null)
