@@ -7,6 +7,8 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* renamed UniqueConstraint.searchUnique to search
+	affects instrumented code
 * Console allows checking Media ContentType against body using magic numbers
 * rename Media.contentTypeMajor to contentTypeSub
 * Media with default Content-Type or major Content-Type do restrict the
